--- a/social-proof-section-master/styles.css
+++ b/social-proof-section-master/styles.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 body{
-    background: url(images/bg-pattern-top-mobile.svg), url(images/bg-pattern-bottom-mobile.svg);gracias por ver mi código
+    background: url(images/bg-pattern-top-mobile.svg), url(images/bg-pattern-bottom-mobile.svg);
     background-repeat: no-repeat;
     background-position: top left, bottom right;
     font-family: 'League Spartan', sans-serif;
